# deep-research

./: .gitignore  README.md
backend/: main.py  models.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  socket.py  utils.py
backend/app/routers/: reports.py
backend/app/sockets/: research.py
backend/llm_agents/: input_guardrail.py  queries_generator.py  report_builder.py  scraper.py  translator.py  web_searcher.py
backend/utils/: utils.py
frontend/: .netlify.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  Report.tsx  ReportListItem.tsx  Status.tsx  UserInputScreen.tsx
frontend/src/components/layouts/: Footer.tsx  Header.tsx  RootLayout.tsx
frontend/src/components/routes/: NotFoundRoute.tsx
frontend/src/components/routes/ResearchProgress/: ResearchProgressRoute.tsx
frontend/src/components/routes/home/: FeedbackContainer.tsx  HomeRoute.tsx  (+3 more)
frontend/src/components/screens/: Process.tsx  Report.tsx  UserInput.tsx
frontend/src/components/status/: Status.tsx  StatusIndicator.tsx
frontend/src/components/ui/: AppButton.tsx  PageSpinner.tsx  ReportNotFound.tsx  ServerError.tsx  StepSpinner.tsx
frontend/src/core/: Endpoints.ts  Models.ts
frontend/src/data/: steps.tsx
frontend/src/hooks/: useDebounce.ts
frontend/src/hooks/api/: useDeleteReport.ts  useReport.ts  useReportLimit.ts  useReports.ts  useStartResearch.ts
frontend/src/provider/: WebSocketProvider.tsx  index.tsx
frontend/src/state/: research.state.ts
(+3 files in other folders)
