[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openai-agents>=0.2.4",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "uvicorn[standard]>=0.35.0",
]
