[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.116.1",
    "openai-agents[litellm]>=0.2.4",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]
